--- a/MyChatApp/app/src/main/res/layout/login.xml
+++ b/MyChatApp/app/src/main/res/layout/login.xml
@@ -74,7 +74,8 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="15dp"
                 android:text="Login"
-                android:textAllCaps="false"/>
+                android:textAllCaps="false"
+                android:onClick="Login"/>
 
             <TextView
                 android:layout_width="wrap_content"
