[add] implements register
To fix : responseCode : 400

--- a/MyChatApp/app/src/main/res/layout/login.xml
+++ b/MyChatApp/app/src/main/res/layout/login.xml
@@ -65,7 +65,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
-                android:singleLine="true" />
+                android:singleLine="true"
+                android:inputType="textPassword"/>
 
             <Button
                 android:id="@+id/btn_login"
